# entt

./: CMakeLists.txt  README.md  TODO
src/entt/entity/: registry.hpp  snapshot.hpp  view.hpp
test/: CMakeLists.txt
test/entt/entity/: registry.cpp
